'commitMessage : Fix cassandra.bat so it allows legacy usage'